[package]
name = "graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.6.0"
once_cell = "1.18.0"

uuid = { version = "1", features = ["v4", "js"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:tasklist"

[package.metadata.component.dependencies]
